--- a/src/pages/buypage/buypage.css
+++ b/src/pages/buypage/buypage.css
@@ -165,3 +165,150 @@
     background-color: white;
     transition: 0.2s ease-out;
   }
+
+
+@media screen and (max-width: 1024px) {
+  .buypage-container {
+    padding: 30px;
+  }
+  
+  .product-image img {
+    width: 300px;
+    height: 300px;
+    margin-right: 30px;
+  }
+  
+  .product-info {
+    height: 300px;
+  }
+  
+  .product-info h1 {
+    font-size: 30px;
+  }
+  
+  .price {
+    font-size: 24px;
+  }
+  
+  .description {
+    font-size: 18px;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .product-details {
+    flex-direction: column;
+    padding: 20px;
+  }
+  
+  .product-image {
+    margin-bottom: 20px;
+  }
+  
+  .product-image img {
+    width: 250px;
+    height: 250px;
+    margin-right: 0;
+  }
+  
+  .product-info {
+    height: auto;
+    width: 100%;
+  }
+  
+  .review-section {
+    margin-top: 30px;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .buypage-container {
+    padding: 15px;
+  }
+  
+  .product-details {
+    padding: 15px;
+    border-radius: 10px;
+  }
+  
+  .product-image img {
+    width: 200px;
+    height: 200px;
+  }
+  
+  .product-info h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .price {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  
+  .description {
+    font-size: 16px;
+  }
+  
+  .addToCartButton {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+  
+  .review-section h2 {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  
+  .rating {
+    font-size: 18px;
+  }
+  
+  .review p {
+    font-size: 14px;
+  }
+  
+  .star {
+    font-size: 20px;
+  }
+  
+  .review-form textarea {
+    padding: 8px;
+    font-size: 14px;
+  }
+  
+  .submit-review-button {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+}
+
+
+@media screen and (max-width: 360px) {
+  .buypage-container {
+    padding: 10px;
+  }
+  
+  .product-details {
+    padding: 10px;
+  }
+  
+  .product-image img {
+    width: 150px;
+    height: 150px;
+  }
+  
+  .product-info h1 {
+    font-size: 20px;
+  }
+  
+  .price {
+    font-size: 18px;
+  }
+  
+  .description {
+    font-size: 14px;
+  }
+}
