--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -28,7 +28,8 @@
   .cartItem img {
     width: 200px;
   }
-  
+
+
   .cartItem .description {
     width: 100%;
     display: flex;
@@ -79,3 +80,158 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
   }
+
+
+
+
+
+@media screen and (max-width: 1024px) {
+  .cartItem {
+    width: 600px;
+    height: 220px;
+    margin: 25px;
+  }
+  
+  .cartItem img {
+    width: 180px;
+  }
+  
+  .cartItem .description {
+    font-size: 26px;
+    line-height: 60px;
+  }
+  
+  .checkout p {
+    font-size: 26px;
+    padding: 25px;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .cart h1 {
+    font-size: 32px;
+    margin-top: 25px;
+  }
+
+
+  
+  .cartItem {
+    width: 400px;
+    height: 200px;
+    margin: 20px;
+  }
+  
+  .cartItem img {
+    width: 150px;
+  }
+  
+  .cartItem .description {
+    font-size: 22px;
+    line-height: 50px;
+  }
+  
+  .countHandler input {
+    width: 40px;
+    height: 25px;
+  }
+  
+  .countHandler button {
+    width: 40px;
+    height: 25px;
+    margin: 8px;
+  }
+  
+  .checkout p {
+    font-size: 24px;
+    padding: 20px;
+  }
+  
+  .checkout button {
+    width: 140px;
+    height: 45px;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .cart h1 {
+    font-size: 28px;
+    margin-top: 20px;
+  }
+  
+  .cartItem {
+    width: 300px;
+    height: auto;
+    flex-direction: column;
+    padding: 15px 0;
+    margin: 15px 0;
+  }
+  
+  .cartItem img {
+    width: 120px;
+    margin-bottom: 10px;
+  }
+  
+  .cartItem .description {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  
+  .countHandler input {
+    width: 35px;
+    height: 25px;
+  }
+  
+  .countHandler button {
+    width: 35px;
+    height: 25px;
+    margin: 5px;
+  }
+  
+  .checkout p {
+    font-size: 20px;
+    padding: 15px;
+  }
+  
+  .checkout button {
+    width: 130px;
+    height: 40px;
+    margin: 5px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+
+
+  .cart h1 {
+    font-size: 24px;
+  }
+  
+  .cartItem .description {
+    font-size: 16px;
+    line-height: 25px;
+  }
+  
+  .countHandler input {
+    width: 30px;
+    height: 22px;
+  }
+  
+  .countHandler button {
+    width: 30px;
+    height: 22px;
+  }
+  
+  .checkout p {
+    font-size: 18px;
+    padding: 10px;
+  }
+  
+  .checkout button {
+    width: 110px;
+    height: 35px;
+    font-size: 12px;
+  }
+}
