--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -3,19 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    background-image: url(/src/assets/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 90vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .login h1 {
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 20px;
 }
 
 .login form {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 400px;
 }
 
 .form-group {
@@ -23,7 +27,7 @@
 }
 
 .form-group label {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 5px;
     display: block;
 }
@@ -31,14 +35,14 @@
 .form-group input {
     width: 100%;
     padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
+    font-size: 19px;
+    border: 1px solid black;
     border-radius: 4px;
 }
 
 .login button {
     padding: 10px;
-    font-size: 18px;
+    font-size: 25px;
     background-color: black;
     color: white;
     border: none;
@@ -53,6 +57,6 @@
 
 .error {
     color: red;
-    font-size: 16px;
+    font-size: 20px;
     margin-top: 10px;
 }
